--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sass": "^1.58.3",
     "swiper": "^9.0.5",
     "vinyl-ftp": "^0.6.1",
-    "webp-converter": "^2.2.3",
+    "webp-converter": "2.2.3",
     "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
   }
